FrameLoader::didChangeIcons isn't called when the favicon is changed. https://bugs.webkit.org/show_bug.cgi?id=112080

Reviewed by Dmitry Titov.

Source/WebCore:

Test: fast/dom/icon-url-property.html

* dom/Document.cpp:
(WebCore::Document::addIconURL): Made the callback for didChangeIcons
happen whenever there are favicon changes instead of filtering it
and have to be in sync about what hosts care about. As far as I could
tell no hosts rely on this callback except for Chromium, so in general
doing less work here may potentially help a small amount for other
ports.

LayoutTests:

* fast/dom/icon-url-property-expected.txt:
* fast/dom/icon-url-property.html: Add some more calls
to trigger didChangeIcons callbacks.


Canonical link: https://commits.webkit.org/131079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146284 268f45cc-cd09-0410-ab3c-d52691b4dbfc